# sensible

./: README.md  pyproject.toml
notebooks/: example.ipynb
sensible/brokers/: base.py  yahoo_finance.py
sensible/data/: base.py  tickers.py
sensible/strategies/: base.py
