[tool.poetry]
name = "sensible"
version = "0.1.0"
description = "backtesting framework"
authors = ["Romil Shah <roshah@umich.edu>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^24.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
